// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPIntegrationLayout should render layout for a new HTTP integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations"
          >
            Integrations
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations/http"
          >
            HTTP
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Add new HTTP integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <span>
    children
  </span>
</div>
`;

exports[`HTTPIntegrationLayout should render the layout of an event page of a HTTP integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations"
          >
            Integrations
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations/http"
          >
            HTTP
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={false}
          tag="li"
        >
          Backend integration
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          #
          2
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <SecondaryNavbar>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1"
    >
      Settings
    </NavLink>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1/events"
    >
      Logs
    </NavLink>
  </SecondaryNavbar>
  <span>
    children
  </span>
</div>
`;

exports[`HTTPIntegrationLayout should render the layout of the events page of a HTTP integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations"
          >
            Integrations
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations/http"
          >
            HTTP
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={false}
          tag="li"
        >
          Backend integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <SecondaryNavbar>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1"
    >
      Settings
    </NavLink>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1/events"
    >
      Logs
    </NavLink>
  </SecondaryNavbar>
  <span>
    children
  </span>
</div>
`;

exports[`HTTPIntegrationLayout should render the layout of the settings page of a HTTP integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations"
          >
            Integrations
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <NavLink
            exact={true}
            to="/app/settings/integrations/http"
          >
            HTTP
          </NavLink>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Backend integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <SecondaryNavbar>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1"
    >
      Settings
    </NavLink>
    <NavLink
      exact={true}
      to="/app/settings/integrations/http/1/events"
    >
      Logs
    </NavLink>
  </SecondaryNavbar>
  <span>
    children
  </span>
</div>
`;
